<resources>
    <string name="app_name">Build it Bigger</string>
    <string name="instructions">Press the button for a delicious joke!</string>
    <string name="button_text">Tell Joke</string>
    <string name="btn1">(Java + android Library)</string>
    <string name="btn2">(Java + android +GCE Model)</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
